--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,8 @@
   function goBack() {
   window. history. back();
   }
-</script>
+  </script>
+  <button type="button" onclick="window.location.href='{{url_for('download')}}';">Загрузить прогноз</button>
   <div id='chart' class='IPC_MoM'></div>
   <div id='chart2' class='IPC_base'></div>
   <div id='chart3' class='Forecast'></div>
@@ -57,7 +58,7 @@
         <input type=file name=file>
         <input type=submit value=Загрузить>
     </form>
-    <!-- <input type="text" id="fname" name="fname" onchange="cb(this.value)"> -->
+    <input type="text" id="fname" name="fname" onchange="cb(this.value)"> 
     <div id="chart" class="chart"></div>
     <div id="png_chart"></div>
 </body>
